Some small typos fixed, cross references to material on vagueness in §§11 and 38 added

--- a/forallx-adl-appendices.tex
+++ b/forallx-adl-appendices.tex
@@ -83,7 +83,7 @@ The basic idea is that rather than writing a connective in a logically complex s
 The standard connectives are these, with their \TFL\ equivalents:
 \begin{center}
 \begin{tabular}{rcc} \toprule 
-Connective & Polish & \TFL \\ \midrule
+Connective & Polish & \TFL\ \\ \midrule
 negation & $N\meta{A}$ & $\enot\meta{A}$ \\
 conjunction & $K\meta{A}\meta{B}$ & $(\meta{A}\eand\meta{B})$\\
 disjunction & $A\meta{A}\meta{B}$ & $(\meta{A}\eor\meta{B})$\\
