--- a/forallx-adl-fol.tex
+++ b/forallx-adl-fol.tex
@@ -131,7 +131,7 @@ Actually we can make an elegant further assumption to incorporate \TFL\ entirely
     \end{earg}
 In \ref{cpa}, `it' refers to Coober Pedy. Not so in \ref{cpb}: `It' in that example is a \define{dummy pronoun}. one which needs to be present for syntactic reasons (every English sentence requires a grammatical subject), but which doesn't make any contribution to the meaning of the sentence. (Try substituting some proper name for `it' in `it is hot' and see what nonsense you get. ) They are common with metereological reports: `it is raining', `it is dark', etc. 
 
-\FOL does not have the syntactic limitation of English that every sentence must include a singular term. We will allow \FOL\ predicates occuring by themselves to count as grammatical sentences of \FOL. These \define{zero-place predicates}, semantically requiring no subject, are to be symbolised by capital letters `$A$' through `$Z$' (perhaps subscripted), but without needing any adjacent name to be grammatical.
+\FOL\ does not have the syntactic limitation of English that every sentence must include a singular term. We will allow \FOL\ predicates occuring by themselves to count as grammatical sentences of \FOL. These \define{zero-place predicates}, semantically requiring no subject, are to be symbolised by capital letters `$A$' through `$Z$' (perhaps subscripted), but without needing any adjacent name to be grammatical.
 
 Note we have thereby included all atomic sentences of \TFL\ in \FOL\ among these special predicates of \FOL. In \TFL\ we used these sentences to symbolise any sentence of English which did not include sentence connectives. In \FOL\ their use will be more limited. But nevertheless, syntactically, since \FOL\ has all the connectives of \TFL\ and all the atomic sentences, we see that \emph{every sentence of \textnormal{\TFL} is also a sentence of \textnormal{\FOL}}.
 
@@ -434,7 +434,7 @@ Sentence \ref{qscope1} is a conditional, whose antecedent is `everyone is a bass
 
 Sentence \ref{qscope2}, by contrast, might best be paraphrased by `every person x is such that, if x is a bassist, then Tim is a bassist'. This is symbolised by `$\forall x (Bx \eif Bb)$'. And this sentence is false. Kim Deal is a bassist. So `$Bk$' is true. But Tim is not a bassist, so `$Bb$' is false. Accordingly, `$Bk \eif Bb$' will be false. So `$\forall x (Bx \eif Bb)$' will be false as well. 
 
-In short, `$(\forall x Bx \eif Bb)$' and `$\forall x (Bx \eif Bb)$' are very different sentences. We can explain the difference in terms of the \emph{scope} of the quantifier.  The scope of quantification is very much like the scope of negation, which we considered when discussing \TFL (§\ref{s.mainconnscope}), and it will help to explain it in this way. We define quantifier scope officially in §\ref{s:FOLSentences}, but we also return to it in a preliminary way in §\ref{quan.scope}.
+In short, `$(\forall x Bx \eif Bb)$' and `$\forall x (Bx \eif Bb)$' are very different sentences. We can explain the difference in terms of the \emph{scope} of the quantifier.  The scope of quantification is very much like the scope of negation, which we considered when discussing \TFL\ (§\ref{s.mainconnscope}), and it will help to explain it in this way. We define quantifier scope officially in §\ref{s:FOLSentences}, but we also return to it in a preliminary way in §\ref{quan.scope}.
 
 In the sentence `$(\enot Bk \eif Bb)$', the scope of `$\enot$' is just the antecedent of the conditional. We are saying something like: if `$Bk$' is false, then `$Bb$' is true. Similarly, in the sentence `$(\forall x Bx \eif Bb)$', the scope of `$\forall x$' is just the antecedent of the conditional. We are saying something like: if `$B$' is true of \emph{everything}, then `$Bb$' is also true. 
 
