--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -1078,7 +1078,7 @@ Every possible situation determines some interpretation (assuming it is not poss
 Still, just as with \TFL, there are arguments that are valid in English that aren't symbolised as a valid argument in \FOL. Consider \begin{earg}
 \item[] It is raining
 \item[So:] It will be that it was raining.
-\end{earg} This is conclusive: there is no possible situation in which it is raining now, but in the future it turns out that it never was raining. But the best we can apparently do in quantifier is to symbolise `it is raining' by `$P$', and `it will be that it was raining' by `$Q$', and $P \ttherefore Q$ is not valid in \FOL. If this argument is valid, it will depend on the logic of expressions that are treated as non-logical expressions in \FOL – here, the tenses `is', `was' and `will be'. We will look at this example again briefly in §\ref{s:nextsteps}.
+\end{earg} This is conclusive: there is no possible situation in which it is raining now, but in the future it turns out that it never was raining. But the best we can apparently do in quantifier is to symbolise `it is raining' by `$P$', and `it will be that it was raining' by `$Q$', and $P \ttherefore Q$ is not valid in \FOL. If this argument is valid, it will depend on the logic of expressions that are treated as non-logical expressions in \FOL\ – here, the tenses `is', `was' and `will be'. We will look at this example again briefly in §\ref{s:nextsteps}.
 
 \section{Some Subtleties about Truth and Interpretation} % Æ added
 
