--- a/forallx-adl-prooffol.tex
+++ b/forallx-adl-prooffol.tex
@@ -1090,7 +1090,7 @@ The axioms of the theory – sentences that are assumed to be true, and so serve
 	\item $\forall x \forall y\; x + y' = (x + y)'$ (the sum of $x$ and the successor of $y$ is the successor of the sum of $x$ and $y$);
 	\item $\forall x\; x\cdot\mathbf{0} = \mathbf{0}$ (multiplying a number by zero results in zero);
 	\item $\forall x \forall y\; x\cdot y' = (x\cdot y) + x$ (the product of $x$ and the successor of $y$ is the product of $x$ and $y$ plus $x$).
-\end{itemize} These axioms serve to fix the intepretation of addition, multiplication, and successor. These axioms are all true in interpretations of \FOL\ in which the domain is the natural numbers, and the function symbols have their intended interpretation. The consequences of these axioms, those sentences that are true in every interpretation in which all the axioms are true, are the arithmetical truths that hold in Robinson arithmetic.\footnote{Another project of the same sort is the symbolisation of set theory in \FOL (see Patrick Suppes (1972) \emph{Axiomatic Set Theory}, Dover), or the symbolisations of mereology, the formal theory of part and whole (see Achille C Varzi (2016) `Mereology' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/mereology/}).}
+\end{itemize} These axioms serve to fix the intepretation of addition, multiplication, and successor. These axioms are all true in interpretations of \FOL\ in which the domain is the natural numbers, and the function symbols have their intended interpretation. The consequences of these axioms, those sentences that are true in every interpretation in which all the axioms are true, are the arithmetical truths that hold in Robinson arithmetic.\footnote{Another project of the same sort is the symbolisation of set theory in \FOL\ (see Patrick Suppes (1972) \emph{Axiomatic Set Theory}, Dover), or the symbolisations of mereology, the formal theory of part and whole (see Achille C Varzi (2016) `Mereology' in Edward N Zalta, ed., \emph{Stanford Encyclopedia of Philosophy}, \httpurl{plato.stanford.edu/entries/mereology/}).}
 
 Once you have a theory like this, a collection of axioms with an intended interpretation symbolised in \FOL, you can ask questions about soundness and completeness of these theories with respect to that model. Robinson arithmetic is sound with respect to its intended interpretation in the natural numbers. But it is incomplete: there are arithmetical truths it does not include. 
 
@@ -1156,7 +1156,7 @@ But logic has possibly more suprising applications too: \begin{itemize}
 
 But I am a philosopher, and I'm interested primarily in applications of logic to philosophical puzzles. I'll close this discussion, and this book, with a brief account of one very prominent puzzle where logic illuminates the structure of the problem and the space of available solutions. It does not, unfortunately, decide everything for us – we need to make theoretical choices on substantive grounds, and logic, because topic-neutral, won't generally be decisive on such matters. 
 
-The problem I'm talking about is the puzzle of \emph{vagueness}. Consider the excerpt from the visible spectrum depicted in Figure~\ref{spectrum}. The spectrum looks continuous, but the discrete medium of the page suggests it is actually made up of many many thin slivers of apparently constant colour, laid adjacent to one another. Let there be 1000 slivers of colour in this spectrum. The spectrum looks continuous because the colour doesn't seem to change between adjacent slivers of colour. There are no sharp cutoffs or discontinuities in the spectrum.
+The problem I'm talking about is the puzzle of \emph{vagueness}. (We briefly encountered this puzzle earlier in §\ref{s:ParadoxesOfMaterialConditional}, in connection with the topic of bivalence.) Consider the excerpt from the visible spectrum depicted in Figure~\ref{spectrum}. The spectrum looks continuous, but the discrete medium of the page suggests it is actually made up of many many thin slivers of apparently constant colour, laid adjacent to one another. Let there be 1000 slivers of colour in this spectrum. The spectrum looks continuous because the colour doesn't seem to change between adjacent slivers of colour. There are no sharp cutoffs or discontinuities in the spectrum.
 
 \begin{figure}
 \centering
@@ -1165,13 +1165,13 @@ The problem I'm talking about is the puzzle of \emph{vagueness}. Consider the ex
 \end{figure}
 
 The left hand end is clearly red. But because the red areas shades smoothly into orange and then yellow, it seems clear that the word `red' denotes a predicate with no sharp cutoffs. It is a \define{vague expression}. Its vagueness, accordingly to many, arises because `red' and other vague words exhibit this feature: \factoidbox{A predicate `$F$' is \define{tolerant} if extremely similar things are either both $F$ or neither $F$.}
-In the case of 'red', adjacent slivers of colour in the spectrum are very similar – they are visually indistinguishable, i.e., they \emph{look the same}. And surely if two things look the same, they cannot be different colours. How could there be two distinct colours that are indistinguishable in appearance – colours are appearance properties, most say.
+In the case of 'red', adjacent slivers of colour in the spectrum are very similar – they are visually indistinguishable, i.e., they \emph{look the same}. And surely if two things look the same, they cannot be different colours. How could there be two distinct colours that are indistinguishable in appearance? – colours are appearance properties, most say.
 
 If `red' is tolerant, then any two adjacent slivers will be either both red, or both not red.  So where `$R$' is interpreted to mean `\gap{1} is red', and `$C$' means `\gap{1} is adjacent to \gap{2}', in the domain of slivers of colour in this spectrum, this \FOL\ sentence appears to be true: 
      $$\forall x \forall y ((Rx \eand Axy) \eif Ry).$$
 This is an instance of the principle of Tolerance, because adjacent slivers are extremely similar. Let the slivers of colour be denoted `$a_{1},…,a_{1000}$', with `$a_{1}$' the leftmost sliver. Then the above tolerance principle, together with, `$Ra_{1}$', and many premises of the form `$Aa_{i}a_{i+1}$' will entail `$\forall x Rx$', given that there is a case of red, and we have enough adjacent cases: as we do in the spectrum.  The formal proof is long, but basically: if there is a case of red, and a case of non-red, then Tolerance tells us they cannot be linked by a sequence of adjacent cases. But in the spectrum any two slivers can be linked by a sequence of adjacent cases. 
 
-There are a number of responses, some of which we've mentioned already. The degree-theory solution says that each adjacent sliver to the right is red to a slightly less degree than the sliver to the left, and that it is true to a lower degree that it is red. Such views abandon tolerance for vague predicates in favour of a principle of `closeness': that extremely similar things are both $F$ to an extremely similar degree.\footnote{See N J J Smith (2008) \emph{Vagueness and Degrees of Truth}, Oxford University Press.} There are also solutions that appeal to truth-value `gaps', resembling many-valued logics in some ways – most prominent among these is the approach known as \define{supervaluationism}.\footnote{See Kit Fine (1975) `Vagueness, truth and logic', \emph{Synthese} \textbf{54}: 235–59, \httpurl{doi.org/10.1007/bf00485047}.} Finally, there is a purely classical logic solution, Williamson's theory of \define{epistemicism}, which says that there are sharp cutoffs (so that the tolerance premise is false), but explains the appearance that there are no sharp cutoffs as a byproduct of our essential inability to know where the sharp boundaries lie. Logic won't decide between these approaches. But it does help us in formulating them precisely and in enabling us to classify their strengths and weaknesses precisely. This is an advantage in most areas of controversy and debate.
+There are a number of responses, some of which we've mentioned already.\footnote{For more on the puzzle of vagueness, see Roy Sorensen's 2022 entry `Vagueness' in \emph{The Stanford Encyclopedia of Philosophy} (\httpurl{plato.stanford.edu/entries/vagueness/}).} The degree-theory solution says that each adjacent sliver to the right is red to a slightly less degree than the sliver to the left, and that it is true to a lower degree that it is red. Such views abandon tolerance for vague predicates in favour of a principle of `closeness': that extremely similar things are both $F$ to an extremely similar degree.\footnote{See N J J Smith (2008) \emph{Vagueness and Degrees of Truth}, Oxford University Press.} There are also solutions that appeal to truth-value `gaps', resembling many-valued logics in some ways – most prominent among these is the approach known as \define{supervaluationism}.\footnote{See Kit Fine (1975) `Vagueness, truth and logic', \emph{Synthese} \textbf{54}: 235–59, \httpurl{doi.org/10.1007/bf00485047}.} Finally, there is a purely classical logic solution, Williamson's theory of \define{epistemicism}, which says that there are sharp cutoffs (so that the tolerance premise is false), but explains the appearance that there are no sharp cutoffs as a byproduct of our essential inability to know where the sharp boundaries lie. Logic won't decide between these approaches. But it does help us in formulating them precisely and in enabling us to classify their strengths and weaknesses precisely. This is an advantage in most areas of controversy and debate.
 
 
 \keyideas{
