--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -135,7 +135,7 @@ Another example: \begin{earg}
 	\caption{Paraphrase of Example \ref{pst1} showing its subsentential structure, as in Example \ref{pst2}.\label{fig:butter}}
 \end{figure} Note that we have not further broken down the canonical clauses into subject-predicate form, because our structural words, the sentence connectives, do not occur within any canonical clause and hence are not `visible' to our analysis at the level of sentences. Finally, we replace the canonical clauses with placeholder sentences, and we reach the structure `Not A and B'.
 
-The schematic paraphrase `Not A and B' is potentially ambiguous, because it is not obvious whether the `not' applies just to the A-clause, or to the whole `A and B' clause. We could introduce parentheses to eliminate this ambiguity, distinguishing `Not (A and B)' from `Not A and B'. This is the approach we will take in our formal language \TFL (see page \pageref{p.con.ambig}). Alternatively, we can use the hierarchical nature of syntactic trees to see see that there are two different structures possible for `Not A and B', as depicted in the schematic syntactic trees in Figure \ref{fig:butter2}. \begin{figure}
+The schematic paraphrase `Not A and B' is potentially ambiguous, because it is not obvious whether the `not' applies just to the A-clause, or to the whole `A and B' clause. We could introduce parentheses to eliminate this ambiguity, distinguishing `Not (A and B)' from `Not A and B'. This is the approach we will take in our formal language \TFL\ (see page \pageref{p.con.ambig}). Alternatively, we can use the hierarchical nature of syntactic trees to see see that there are two different structures possible for `Not A and B', as depicted in the schematic syntactic trees in Figure \ref{fig:butter2}. \begin{figure}
 	\begin{tikzpicture}[sibling distance=16pt]
 		\Tree [.S [.S Not  [.S A ] ] [  and  [.S B ] ] ]
 	\end{tikzpicture}
