--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -695,7 +695,7 @@ So the Crows will win.
 		\item[\ex{n:GodParadox}] It's not the case that, if God exists, She answers malevolent prayers. So God exists.
 %	Aaliyah wants to kill Zebedee. She knows that, if she puts chemical A into Zebedee's water bottle, Zebedee will drink the contaminated water and die. Equally, Bathsehba wants to kill Zebedee. She knows that, if she puts chemical B into Zebedee's water bottle, then Zebedee will drink the contaminated water and die. But chemicals A and B neutralise each other; so that if both are added to the water bottle, then Zebedee will not die.
 	\end{earg}
-Both of these arguments have the same structure. Let's focus on the second, example \ref{n:GodParadox}. Symbolising it in \TFL, we would offer something like `$\enot (G \eif M) \ttherefore G$'. Now, as can easily be checked with a truth table, this is a correct entailment in \TFL. So if we symbolise the argument \ref{n:GodParadox} in \TFL in this way, the conditional premise entails that God exists. But that's strange: surely even the atheist can accept sentence \ref{n:GodParadox}, without contradicting herself! Some say that \ref{n:GodParadox} would be better symbolised by `$G \eif \enot M$', even though that doesn't reflect the apparent form of the English sentence. `$G \eif \enot M$' does not entail $G$. This symbolisation does a better job of reflecting the intuitive consequences of the English sentence \ref{n:GodParadox}, but at the cost of abandoning a straightforward correspondence between the structure of English sentences and their \TFL\ symbolisations. 
+Both of these arguments have the same structure. Let's focus on the second, example \ref{n:GodParadox}. Symbolising it in \TFL, we would offer something like `$\enot (G \eif M) \ttherefore G$'. Now, as can easily be checked with a truth table, this is a correct entailment in \TFL. So if we symbolise the argument \ref{n:GodParadox} in \TFL\ in this way, the conditional premise entails that God exists. But that's strange: surely even the atheist can accept sentence \ref{n:GodParadox}, without contradicting herself! Some say that \ref{n:GodParadox} would be better symbolised by `$(G \eif \enot M)$', even though that doesn't reflect the apparent form of the English sentence. `$(G \eif \enot M)$' does not entail $G$. This symbolisation does a better job of reflecting the intuitive consequences of the English sentence \ref{n:GodParadox}, but at the cost of abandoning a straightforward correspondence between the structure of English sentences and their \TFL\ symbolisations. 
 
 A better alternative might be to think that the conditional `if God exists, she answers malevolent prayers' is not to be symbolised by `$\eif$'. This conditional is false, many think: they may think, for example, that it is part of the concept of God that God is good, and hence would not grant prayers with evil intent. Even the atheist might accept this, maybe because they accept the subjunctive conditional `even if God were to exist, God would not answer malevolent prayers' (§\ref{s:IndicativeSubjunctive}). This sort of example has motivated many philosophers to offer nontruth-functional accounts of the English `if', including some that make it behave rather like a subjunctive conditional.\footnote{Edgington discusses Stalnaker's version of such an account in `Nearest Possible Worlds', §4.1 of her `Indicative Conditionals', cited above (\httpurl{plato.stanford.edu/entries/conditionals/\#Sta}).} 
 
@@ -706,15 +706,15 @@ Finally, consider the sentence:
 	\begin{earg}
 		\item[\ex{n:JanBald}] Jan is neither bald nor not-bald.
 	\end{earg}
-To symbolise this sentence in \TFL, we would offer something like `$\enot (J \eor \enot J)$'. This a logical falsehood (check this with a truth-table). But sentence \ref{n:JanBald} does not itself seem like a logical falsehood; for we might have happily go on to add `Jan is on the borderline of baldness'! To make this point another way: as is easily seen by truth tables, `$\enot (J \eor \enot J)$' is logically equivalent to `$\enot J \eand J$'. This latter sentence symbolises an obvious logical falsehood in English:
+To symbolise this sentence in \TFL, we would offer something like `$\enot (J \eor \enot J)$'. This a logical falsehood (check this with a truth-table). But sentence \ref{n:JanBald} does not itself seem like a logical falsehood; for we might have happily go on to add `Jan is on the borderline of baldness'! Making this point another way: as may easily be seen by truth tables, `$\enot (J \eor \enot J)$' is logically equivalent to `$(\enot J \eand J)$'. This latter sentence symbolises an obvious logical falsehood in English:
 	\begin{earg}
 		\item[\ex{n:JanBald2}]  Jan is both not-bald and also bald.
 	\end{earg}
 Is it equally obvious, though, that \ref{n:JanBald} is synonymous with \ref{n:JanBald2}? It seems like it may not be, even though our test will classify any English argument from one to the other as valid (since both are symbolised as logical falsehoods, which degenerately entail anything). 
 
-Because of the way we have defined valuations, \emph{every} sentence of \TFL\ is assigned either True or False in any valuation which makes it meaningful by assigning truth values to its atomic sentences. This property of \TFL\ is known as \define{bivalence}: that every sentence has exactly one of the two possible truth values. The case of Jan's baldness (or otherwise) raises the general question of what logic we should use when dealing with \emph{vague} discourse, properties like `bald' or `tall' which seem to have borderline cases. Many think it plausible that a borderline case of F is neither a case of F, nor does it fail to be a case of F. Hence they have been tempted to deny bivalence for English: `Jan is bald', they say, is neither True nor False! If $p$ is neither true nor false, then it is hardly surprising that `$p$ or not-$p$' turns out to be untrue. If these thinkers are right that vagueness in English leads to the denial of bivalence, while \TFL\ is bivalent, this will give rise to mismatches between English and \TFL. These mismatches will not involve inadequate symbolisation, but a more fundamental disagreement about the background framework – here, a disagreement about the nature of truth.\footnote{For more on the logic of vagueness, see Roy Sorensen's 2018 entry `Vagueness' in \emph{The Stanford Encyclopedia of Philosophy} (\httpurl{plato.stanford.edu/entries/vagueness/}). He discusses views that deny bivalence in §5.} 
+Because of the way we have defined valuations, \emph{every} sentence of \TFL\ is assigned either True or False in any valuation which makes it meaningful by assigning truth values to its atomic sentences. This property of \TFL\ is known as \define{bivalence}: that every sentence has exactly one of the two possible truth values. The case of Jan's baldness (or otherwise) raises the general question of what logic we should use when dealing with \emph{vague} discourse, predicates like `bald' or `tall' which seem to have borderline cases. Many think it plausible that a borderline case of some predicate \meta{F} is neither a case of \meta{F}, nor does it fail to be a case of \meta{F}. Hence they have been tempted to deny bivalence for English: `Jan is bald', they say, is neither True nor False! If $p$ is neither true nor false, then it is hardly surprising that `$p$ or not-$p$' turns out to be untrue. If these thinkers are right that vagueness in English leads to the denial of bivalence, while \TFL\ is bivalent, this will give rise to mismatches between English and \TFL. These mismatches will not involve inadequate symbolisation, but a more fundamental disagreement about the background framework – here, a disagreement about the nature of truth. We will return to the topic of vagueness (though still briefly) at the end of this book, in §{stepwith}. 
 
-In different ways, these three examples highlight some of the limits of working with a language like \TFL that can \emph{only} handle truth-functional connectives. Moreover, these limits give rise to some interesting questions in philosophical logic. Part of the purpose of this course is to equip you with the tools to explore these questions of \emph{philosophical logic}. But we have to walk before we can run; we have to become proficient in using \TFL, before we can adequately discuss its limits, and consider alternatives. It is important to recognise that these are limits to \TFL\ only in its role as a framework to model validity in English and other natural languages. They are not problems for \TFL\ as a formal language. Moreover, as I have emphasised already, these limitations are merely manifestations of the fact that \TFL\ is being used as a model of natural language. Models are typically not designed or intended to capture every aspect of what they model. Their utility derives often from being simpler than the complex things they are representing. The limitations we have noted indicate that \TFL\ may not model English perfectly in these cases. But \TFL\ remains an adequate model of English in many other cases.  
+In different ways, these three examples highlight some of the limits of working with a language like \TFL\ that can \emph{only} handle truth-functional connectives. Moreover, these limits give rise to some interesting questions in philosophical logic. Part of the purpose of this course is to equip you with the tools to explore these questions of \emph{philosophical logic}. But we have to walk before we can run; we have to become proficient in using \TFL, before we can adequately discuss its limits, and consider alternatives. It is important to recognise that these are limits to \TFL\ only in its role as a framework to model validity in English and other natural languages. They are not problems for \TFL\ as a formal language. Moreover, as I have emphasised already, these limitations are merely manifestations of the fact that \TFL\ is being used as a model of natural language. Models are typically not designed or intended to capture every aspect of what they model. Their utility derives often from being simpler than the complex things they are representing. The limitations we have noted indicate that \TFL\ may not model English perfectly in these cases. But \TFL\ remains an adequate model of English in many other cases.  
 
 
 
