cross references to material on vagueness in §§11 and 38 fixed

--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -712,7 +712,7 @@ To symbolise this sentence in \TFL, we would offer something like `$\enot (J \eo
 	\end{earg}
 Is it equally obvious, though, that \ref{n:JanBald} is synonymous with \ref{n:JanBald2}? It seems like it may not be, even though our test will classify any English argument from one to the other as valid (since both are symbolised as logical falsehoods, which degenerately entail anything). 
 
-Because of the way we have defined valuations, \emph{every} sentence of \TFL\ is assigned either True or False in any valuation which makes it meaningful by assigning truth values to its atomic sentences. This property of \TFL\ is known as \define{bivalence}: that every sentence has exactly one of the two possible truth values. The case of Jan's baldness (or otherwise) raises the general question of what logic we should use when dealing with \emph{vague} discourse, predicates like `bald' or `tall' which seem to have borderline cases. Many think it plausible that a borderline case of some predicate \meta{F} is neither a case of \meta{F}, nor does it fail to be a case of \meta{F}. Hence they have been tempted to deny bivalence for English: `Jan is bald', they say, is neither True nor False! If $p$ is neither true nor false, then it is hardly surprising that `$p$ or not-$p$' turns out to be untrue. If these thinkers are right that vagueness in English leads to the denial of bivalence, while \TFL\ is bivalent, this will give rise to mismatches between English and \TFL. These mismatches will not involve inadequate symbolisation, but a more fundamental disagreement about the background framework – here, a disagreement about the nature of truth. We will return to the topic of vagueness (though still briefly) at the end of this book, in §{stepwith}. 
+Because of the way we have defined valuations, \emph{every} sentence of \TFL\ is assigned either True or False in any valuation which makes it meaningful by assigning truth values to its atomic sentences. This property of \TFL\ is known as \define{bivalence}: that every sentence has exactly one of the two possible truth values. The case of Jan's baldness (or otherwise) raises the general question of what logic we should use when dealing with \emph{vague} discourse, predicates like `bald' or `tall' which seem to have borderline cases. Many think it plausible that a borderline case of some predicate \meta{F} is neither a case of \meta{F}, nor does it fail to be a case of \meta{F}. Hence they have been tempted to deny bivalence for English: `Jan is bald', they say, is neither True nor False! If $p$ is neither true nor false, then it is hardly surprising that `$p$ or not-$p$' turns out to be untrue. If these thinkers are right that vagueness in English leads to the denial of bivalence, while \TFL\ is bivalent, this will give rise to mismatches between English and \TFL. These mismatches will not involve inadequate symbolisation, but a more fundamental disagreement about the background framework – here, a disagreement about the nature of truth. We will return to the topic of vagueness (though still briefly) at the end of this book, in §\ref{stepwith}. 
 
 In different ways, these three examples highlight some of the limits of working with a language like \TFL\ that can \emph{only} handle truth-functional connectives. Moreover, these limits give rise to some interesting questions in philosophical logic. Part of the purpose of this course is to equip you with the tools to explore these questions of \emph{philosophical logic}. But we have to walk before we can run; we have to become proficient in using \TFL, before we can adequately discuss its limits, and consider alternatives. It is important to recognise that these are limits to \TFL\ only in its role as a framework to model validity in English and other natural languages. They are not problems for \TFL\ as a formal language. Moreover, as I have emphasised already, these limitations are merely manifestations of the fact that \TFL\ is being used as a model of natural language. Models are typically not designed or intended to capture every aspect of what they model. Their utility derives often from being simpler than the complex things they are representing. The limitations we have noted indicate that \TFL\ may not model English perfectly in these cases. But \TFL\ remains an adequate model of English in many other cases.  
 
